added more information about Devos work

--- a/config.yaml
+++ b/config.yaml
@@ -136,7 +136,13 @@ params:
         company: Devos AS
         link: https://devos.no
         details: >-
-          I november startet jeg opp som selvstendig konsulent i eget firma. Mer informasjon finner du på nettsiden: https://devos.no
+          I november startet jeg opp som selvstendig konsulent i eget firma. Mer informasjon finner du på nettsiden: https://devos.no.
+          Jeg tar alle slags relevantejobber, men primært jobber jeg med:
+        items:
+          - details: Frontendutvikling i React
+          - details: Backendutvikling i Elixir/Phoenix
+          - details: Apputvikling i Flutter (2019-)
+          - details: Leveranse av nettsider (WordPress)
       - title: Medeier og CTO
         dates: 2019 - nå (CTO november 2021 - nå)
         company: Trimpoeng AS
